# interpreter-pf2023

./: .gitignore  README.md  dune-project  pf23.opam
lib/: calculator.ml  default_functions.ml  dict.ml  dune  elements.ml  eval.ml  print.ml  stack.ml
test/: dune  test_calculator.ml  test_dict.ml  test_elements.ml  test_eval.ml  test_stack.ml
